[package]
name = "bevy_kindly_macros"
license-file = "LICENSE.md"
description = "An extension to Bevy Kindly with macros to define entity kinds for Bevy ECS."
homepage = "https://github.com/Zeenobit/bevy_kindly"
repository = "https://github.com/Zeenobit/bevy_kindly"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.*", features = [ "full", "fold" ] }
quote = "1.0.*"
proc-macro2 = "1.0.46"